# ryba

./: LICENSE  README.rst  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg  tox.ini
src/: iso8601.pyi
src/rsync_backup/: __main__.py  backup.py  cli.py  config.py  constants.py  exceptions.py  logging.py
src/rsync_backup/rotators/: __init__.py  _base.py  _date.py  _simple.py
src/rsync_backup/targets/: __init__.py  _base.py
src/ryba/: backup.py  cli.py  config.py  directories.py  logging.py  registry.py
src/ryba/commands/: backup.py  rotate.py  snapshot.py
src/ryba/rotators/: _base.py  _date.py
src/ryba/targets/: __init__.py  _base.py  _local.py  _ssh.py
