[metadata]
# replace with your username:
name = ryba
version = 0.0.1
author = Tim Heap
author_email = tim@timheap.me
description = Back up your personal files using rsync
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/timheap/ryba
project_urls =
    Bug Tracker = https://github.com/timheap/ryba/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
	attrs
	spur~=0.3.22
	iso8601>0.1<0.1.14
	toml~=0.10.2
	xdg~=5.0

[options.entry_points]
console_scripts =
	ryba = ryba.cli:main

[options.packages.find]
where = src

[mypy]
check_untyped_defs=true
disallow_untyped_calls=true
disallow_untyped_defs=true
strict_optional=true
warn_no_return=true
warn_redundant_casts=true
warn_return_any=true
warn_unused_ignores=true

[mypy-spur.*]
ignore_missing_imports = True
